# OneFileTasks

./: .env.example  .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
demo/: demodata-one-file-tasks.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Sidebar.tsx  TopBar.tsx
src/components/modals/: DeleteConfirmationModal.tsx  HelpModal.tsx  QuickAddModal.tsx  RecurrenceModal.tsx  SettingsModal.tsx
src/components/tasks/: RichTextEditor.tsx  TaskDetails.tsx  TaskListItem.tsx
src/hooks/: useFileSystemSync.ts  useKeyboardShortcuts.ts  useSettings.ts  useTaskActions.ts  useTaskHistory.ts  useTaskTree.ts
src/lib/: db.ts
src/types/: index.ts
