[package]
name = "OneFileTasks"
version = "0.1.0"
description = "A local-first, single-file task manager"
authors = ["Michael Bertsch"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
