[package]
name = "OneFileTasks"
version = "1.1.0"
description = "A local-first, single-file task manager"
authors = ["Michael Bertsch"]
edition = "2024"

[lib]
name = "one_file_tasks" 
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
tauri-plugin-shell = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
